[package]
name = "ggui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "ggui"


[dependencies]
enum_dispatch = "0.3.12"
ggez = "0.9.3"
log = "0.4.20"
math = { git = "https://github.com/bowarc/crates", package = "math", features = [
  "ggez",
], rev = "0b53432815263a8d9e36f660ec732ac9950a6c67" }
time = { git = "https://github.com/bowarc/crates", package = "time" }
